--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.11.0
   cloud_firestore: ^3.5.0
   firebase_analytics: ^9.3.7
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
