--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cloud_firestore: ^3.5.0
   firebase_analytics: ^9.3.7
   google_fonts: ^3.0.1
+  sqflite: ^2.2.0+3
+  path_provider: ^2.0.11
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
